--- a/inf/StaticSiteInfrastructure.csproj
+++ b/inf/StaticSiteInfrastructure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.5.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
     <PackageReference Include="Pulumi" Version="3.*" />
     <PackageReference Include="Pulumi.AzureNative" Version="1.*" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
